--- a/_publications/2024-08-17-GNN-GAN.md
+++ b/_publications/2024-08-17-GNN-GAN.md
@@ -3,11 +3,10 @@ title: "Generating Packet-Level Header Traces Using GNN-powered GAN"
 collection: publications
 category: conferences
 permalink: https://arxiv.org/abs/2409.01265
-excerpt: 'This paper presents a novel approach for generating realistic packet-level header traces using a GNN-powered GAN framework.'
+excerpt: 'A novel approach for generating realistic packet-level header traces using GNN-powered GAN.'
 date: 2024-09-02
-venue: 'Preprint available on arXiv'
+venue: 'arXiv preprint'
 paperurl: 'https://arxiv.org/pdf/2409.01265'
-slidesurl: #
-citation: 'Xu, Zhen. “Generating Packet-Level Header Traces Using GNN-powered GAN.” ArXiv abs/2409.01265 (2024): n. pag.'
+citation: 'Xu, Zhen. "Generating Packet-Level Header Traces Using GNN-powered GAN." arXiv:2409.01265 (2024)'
 ---
-This paper introduces an innovative use of Graph Neural Networks (GNNs) and Generative Adversarial Networks (GANs) to generate synthetic packet-level header traces. By leveraging the structure of GNNs and the generative capability of GANs, our approach achieves high accuracy and preserves statistical properties of real network data.
+<!-- Introduces a GNN-GAN framework for generating synthetic packet-level header traces while preserving statistical properties of real network data. -->
